--- a/index.css
+++ b/index.css
@@ -1776,6 +1776,24 @@ html{
         filter: alpha(opacity=100);
     }
 }
+@-webkit-keyframes rotateInDownRight {
+    0% {
+        -webkit-transform-origin: right bottom;
+        transform-origin: right bottom;
+        -webkit-transform: rotate3d(0,0,1,45deg);
+        transform: rotate3d(0,0,1,45deg);
+        opacity: 0;
+        filter: alpha(opacity=0);
+    }
+    100% {
+        -webkit-transform-origin: right bottom;
+        transform-origin: right bottom;
+        -webkit-transform: none;
+        transform: none;
+        opacity: 1;
+        filter: alpha(opacity=100);
+    }
+}
 @keyframes rotateInDownLeft {
     0% {
         -webkit-transform-origin: left bottom;
@@ -1792,6 +1810,24 @@ html{
     transform: none;
     opacity: 1;
     filter: alpha(opacity=100);
+    }
+}
+@-webkit-keyframes rotateInDownLeft {
+    0% {
+        -webkit-transform-origin: left bottom;
+        transform-origin: left bottom;
+        -webkit-transform: rotate3d(0,0,1,-45deg);
+        transform: rotate3d(0,0,1,-45deg);
+        opacity: 0;
+        filter: alpha(opacity=0);
+    }
+    100% {
+        -webkit-transform-origin: left bottom;
+        transform-origin: left bottom;
+        -webkit-transform: none;
+        transform: none;
+        opacity: 1;
+        filter: alpha(opacity=100);
     }
 }
 @keyframes rotateInUpRight {
@@ -1812,22 +1848,22 @@ html{
     filter: alpha(opacity=100);
     }
 }
-@keyframes rotateInDownRight {
+@-webkit-keyframes rotateInUpRight {
     0% {
         -webkit-transform-origin: right bottom;
         transform-origin: right bottom;
-        -webkit-transform: rotate3d(0,0,1,45deg);
-        transform: rotate3d(0,0,1,45deg);
+        -webkit-transform: rotate3d(0,0,1,-90deg);
+        transform: rotate3d(0,0,1,-90deg);
         opacity: 0;
         filter: alpha(opacity=0);
     }
     100% {
-    -webkit-transform-origin: right bottom;
-    transform-origin: right bottom;
-    -webkit-transform: none;
-    transform: none;
-    opacity: 1;
-    filter: alpha(opacity=100);
+        -webkit-transform-origin: right bottom;
+        transform-origin: right bottom;
+        -webkit-transform: none;
+        transform: none;
+        opacity: 1;
+        filter: alpha(opacity=100);
     }
 }
 @keyframes tada {
@@ -1853,6 +1889,29 @@ html{
     transform: scale3d(1,1,1);
     }
 }
+@-webkit-keyframes tada {
+    0% {
+        -webkit-transform: scale3d(1,1,1);
+        transform: scale3d(1,1,1);
+    }
+    10%, 20% {
+        -webkit-transform: scale3d(.9,.9,.9) rotate3d(0,0,1,-3deg);
+        transform: scale3d(.9,.9,.9) rotate3d(0,0,1,-3deg);
+    }
+
+    30%, 50%, 70%, 90% {
+        -webkit-transform: scale3d(1.1,1.1,1.1) rotate3d(0,0,1,3deg);
+        transform: scale3d(1.1,1.1,1.1) rotate3d(0,0,1,3deg);
+    }
+    40%, 60%, 80% {
+        -webkit-transform: scale3d(1.1,1.1,1.1) rotate3d(0,0,1,-3deg);
+        transform: scale3d(1.1,1.1,1.1) rotate3d(0,0,1,-3deg);
+    }
+    100% {
+        -webkit-transform: scale3d(1,1,1);
+        transform: scale3d(1,1,1);
+    }
+}
 @keyframes bounceInUp {
     0% {
         opacity: 0;
@@ -1867,6 +1926,20 @@ html{
     transform: none;
 }
 }
+@-webkit-keyframes bounceInUp {
+    0% {
+        opacity: 0;
+        filter: alpha(opacity=0);
+        -webkit-transform: translate3d(0,-400%,0);
+        transform: translate3d(0,-400%,0);
+    }
+    100% {
+        opacity: 1;
+        filter: alpha(opacity=100);
+        -webkit-transform: none;
+        transform: none;
+    }
+}
 @keyframes bounceInDown {
     0% {
         opacity: 0;
@@ -1879,6 +1952,20 @@ html{
     filter: alpha(opacity=100);
     -webkit-transform: none;
     transform: none;
+    }
+}
+@-webkit-keyframes bounceInDown {
+    0% {
+        opacity: 0;
+        filter: alpha(opacity=0);
+        -webkit-transform: translate3d(0,400%,0);
+        transform: translate3d(0,400%,0);
+    }
+    100% {
+        opacity: 1;
+        filter: alpha(opacity=100);
+        -webkit-transform: none;
+        transform: none;
     }
 }
 @keyframes bounceIn {
@@ -1909,6 +1996,36 @@ html{
     100% {
     -webkit-transform: scale3d(1,1,1);
     transform: scale3d(1,1,1);
+    }
+}
+@-webkit-keyframes bounceIn {
+    0%, 20%, 40%, 60%, 80%, 100% {
+        -webkit-transition-timing-function: cubic-bezier(.215,.61,.355,1);
+        transition-timing-function: cubic-bezier(.215,.61,.355,1);
+    }
+    0% {
+        opacity: 0;
+        filter: alpha(opacity=0);
+        -webkit-transform: scale3d(2,2,2);
+        transform: scale3d(2,2,2);
+    }
+    40% {
+        -webkit-transform: scale3d(.9,.9,.9);
+        transform: scale3d(.9,.9,.9);
+    }
+    60% {
+        -webkit-transform: scale3d(1.03,1.03,1.03);
+        transform: scale3d(1.03,1.03,1.03);
+    }
+    80% {
+        opacity: 1;
+        filter: alpha(opacity=100);
+        -webkit-transform: scale3d(.97,.97,.97);
+        transform: scale3d(.97,.97,.97);
+    }
+    100% {
+        -webkit-transform: scale3d(1,1,1);
+        transform: scale3d(1,1,1);
     }
 }
 @keyframes fadeIn {
@@ -2181,19 +2298,6 @@ html{
     }
 }
 @-webkit-keyframes fadeInLeft {
-    from {
-        opacity: 0;
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0);
-    }
-
-    to {
-        opacity: 1;
-        -webkit-transform: none;
-        transform: none;
-    }
-}
-@keyframes fadeInLeft {
     from {
         opacity: 0;
         -webkit-transform: translate3d(-100%, 0, 0);
