--- a/index.css
+++ b/index.css
@@ -150,6 +150,11 @@ html{
     background-size: cover;
     position: relative;
 }
+.slide12{
+    background: url("img/a60.png") no-repeat;
+    background-size: cover;
+    position: relative;
+}
 .slide1 img:nth-child(1){
     z-index:0;
     position: absolute;
@@ -1082,6 +1087,29 @@ html{
     left:2.8rem;
     z-index:1;
 }
+.slide12 img:nth-child(1){
+    width: 4rem;
+    height: 4.6rem;
+    top: 1.8rem;
+    left:1.4rem;
+    z-index:0;
+}
+.slide12 span:nth-child(2){
+    font-size: .4rem;
+    color: #f20d0d;
+    position: absolute;
+    top: 6.8rem;
+    left:2rem;
+    z-index:1;
+}
+.slide12 span:nth-child(3){
+    font-size: .4rem;
+    color: #f20d0d;
+    position: absolute;
+    top: 7.5rem;
+    left:2.3rem;
+    z-index:1;
+}
 #page1 img:nth-child(1){
     -webkit-animation:rotateInDownRight 1s 1.5s 1 both;
     -moz-animation:rotateInDownRight 1s 1.5s 1 both;
@@ -1757,6 +1785,26 @@ html{
     -webkit-animation:rotateInUpRight 2s 3s 1 both;
     -moz-animation:rotateInUpRight 2s 3s 1 both;
     animation:rotateInUpRight 2s 3s 1 both;
+}
+#page12 img:nth-child(1){
+    z-index:0;
+    -webkit-animation:rotateInUpRight 2s 2s 1 both;
+    -moz-animation:rotateInUpRight 2s 2s 1 both;
+    animation:rotateInUpRight 2s 2s 1 both;
+}
+#page12 span:nth-child(2){
+    z-index:0;
+    -webkit-animation:bounceInLeft 1s 2.5s 1 both;
+    -moz-animation:bounceInLeft 1s 2.5s 1 both;
+    animation:bounceInLeft 1s 2.5s 1 both;
+
+}
+#page12 span:nth-child(3){
+    z-index:0;
+    -webkit-animation:bounceInRight 1s 2.5s 1 both;
+    -moz-animation:bounceInRight 1s 2.5s 1 both;
+    animation:bounceInRight 1s 2.5s 1 both;
+
 }
 @keyframes rotateInDownRight {
     0% {
