--- a/index.css
+++ b/index.css
@@ -165,6 +165,11 @@ html{
     background-size: cover;
     position: relative;
 }
+.slide15{
+    background: url("img/a71.png") no-repeat;
+    background-size: cover;
+    position: relative;
+}
 .slide1 img:nth-child(1){
     z-index:0;
     position: absolute;
@@ -1200,6 +1205,186 @@ html{
     color: #f20d0d;
     z-index:0;
 }
+.slide15 img:nth-child(1){
+    width: 100%;
+    height: .78rem;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index:0;
+}
+.slide15 img:nth-child(2){
+    width: 1.34rem;
+    height: 3.63rem;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index:0;
+}
+.slide15 img:nth-child(3){
+    width: 1.34rem;
+    height: 3.63rem;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index:0;
+}
+.slide15 img:nth-child(4){
+    width: 1.47rem;
+    height: .81rem;
+    position: absolute;
+   left: 1rem;
+    top: 1.6rem;
+    z-index:0;
+}
+.slide15 img:nth-child(5){
+    width: 1.47rem;
+    height: .81rem;
+    position: absolute;
+   right: 1rem;
+    top: 1.6rem;
+    z-index:0;
+}
+.slide15 img:nth-child(6){
+    width: 1.11rem;
+    height: 1.19rem;
+    position: absolute;
+   left: 1.7rem;
+    top: 1.2rem;
+    z-index:0;
+}
+.slide15 img:nth-child(7){
+    width: 1.11rem;
+    height: 1.19rem;
+    position: absolute;
+   left: 2.7rem;
+    top: 1.4rem;
+    z-index:0;
+}
+.slide15 img:nth-child(8){
+    width: 1.11rem;
+    height: 1.19rem;
+    position: absolute;
+   right: 1.75rem;
+    top: 1.2rem;
+    z-index:0;
+}
+.slide15 span:nth-child(9){
+    font-size: .4rem;
+    position: absolute;
+    left: 1.4rem;
+    top: 2.7rem;
+    color: #eec749;
+    z-index:0;
+}
+.slide15 span:nth-child(10){
+    font-size: .33rem;
+    position: absolute;
+    left: 1.2rem;
+    top: 3.3rem;
+    color: #eec749;
+    z-index:0;
+}
+.slide15 span:nth-child(11){
+    font-size: .33rem;
+    position: absolute;
+    right: 1.2rem;
+    top: 3.3rem;
+    color: #eec749;
+    z-index:0;
+}
+.slide15 span:nth-child(12){
+    font-size: .33rem;
+    position: absolute;
+    left: 1.2rem;
+    top: 3.7rem;
+    color: #eec749;
+    z-index:0;
+}
+.slide15 span:nth-child(13){
+    font-size: .33rem;
+    position: absolute;
+    right: 1.2rem;
+    top: 3.7rem;
+    color: #eec749;
+    z-index:0;
+}
+.slide15 span:nth-child(14){
+    font-size: .33rem;
+    position: absolute;
+    left: 1.2rem;
+    top: 4.2rem;
+    color: #eec749;
+    z-index:0;
+}
+.slide15 span:nth-child(15){
+    font-size: .33rem;
+    position: absolute;
+    right: 1.2rem;
+    top: 4.2rem;
+    color: #eec749;
+    z-index:0;
+}
+.slide15 span:nth-child(16){
+    font-size: .33rem;
+    position: absolute;
+    left: 1.2rem;
+    top: 4.7rem;
+    color: #eec749;
+    z-index:0;
+}
+.slide15 span:nth-child(17){
+    font-size: .33rem;
+    position: absolute;
+    right: 1.2rem;
+    top: 4.7rem;
+    color: #eec749;
+    z-index:0;
+}
+.slide15 span:nth-child(18){
+    font-size: .5rem;
+    position: absolute;
+    left: 2.25rem;
+    top: 5.2rem;
+    color: #eec749;
+    z-index:0;
+}
+.slide15 img:nth-child(19){
+    width: 3.84rem;
+    height: 4.97rem;
+    position: absolute;
+    left: -1rem;
+    bottom: 1rem;
+    z-index:0;
+}
+.slide15 img:nth-child(20){
+    width: 3.84rem;
+    height: 4.97rem;
+    position: absolute;
+    right: -1rem;
+    bottom: 1rem;
+    z-index:0;
+}
+.slide15 img:nth-child(21){
+    width: 5.43rem;
+    height: 5.01rem;
+    position: absolute;
+    left: .5rem;
+    bottom: .3rem;
+    z-index:0;
+}
+.slide15 img:nth-child(22){
+    width: 100%;
+    height: .87rem;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index:0;
+}
+.slide15 img:nth-child(23){
+    width: 100%;
+    height: 100%;
+}
 #page1 img:nth-child(1){
     -webkit-animation:rotateInDownRight 1s 1.5s 1 both;
     -moz-animation:rotateInDownRight 1s 1.5s 1 both;
@@ -1970,6 +2155,159 @@ html{
     -webkit-animation:fadeInDown 1.5s 2.3s 1 both;
     -moz-animation:fadeInDown 1.5s 2.3s 1 both;
     animation:fadeInDown 1.5s 2.3s 1 both;
+
+}
+#page15 img:nth-child(1){
+    z-index:0;
+    -webkit-animation:fadeInDown 1.5s 0.5s 1 both;
+    -moz-animation:fadeInDown 1.5s 0.5s 1 both;
+    animation:fadeInDown 1.5s 0.5s 1 both
+
+}
+#page15 img:nth-child(2){
+    z-index:0;
+    -webkit-animation:fadeInRight 1.5s 0.8s 1 both;
+    -moz-animation:fadeInRight 1.5s 0.8s 1 both;
+    animation:fadeInRight 1.5s 0.8s 1 both;
+
+}
+#page15 img:nth-child(3){
+    z-index:0;
+    -webkit-animation:fadeInLeft 1.5s 0.8s 1 both;
+    -moz-animation:fadeInLeft 1.5s 0.8s 1 both;
+    animation:fadeInLeft 1.5s 0.8s 1 both;
+
+}
+#page15 img:nth-child(4){
+    z-index:0;
+    -webkit-animation:fadeInLeft 2s 3s 1 both;
+    -moz-animation:fadeInLeft 2s 3s 1 both;
+    animation:fadeInLeft 2s 3s 1 both;
+
+}
+#page15 img:nth-child(5){
+    z-index:0;
+    -webkit-animation:fadeInRight 2s 3s 1 both;
+    -moz-animation:fadeInRight 2s 3s 1 both;
+    animation:fadeInRight 2s 3s 1 both;
+
+}
+#page15 img:nth-child(6){
+    z-index:0;
+    -webkit-animation:zoomOut 3s 2s 1 both;
+    -moz-animation:zoomOut 3s 2s 1 both;
+    animation:zoomOut 3s 2s 1 both;
+
+}
+#page15 img:nth-child(7){
+    z-index:0;
+    -webkit-animation:zoomOut 3s 2.5s 1 both;
+    -moz-animation:zoomOut 3s 2.5s 1 both;
+    animation:zoomOut 3s 2.5s 1 both;
+
+}
+#page15 img:nth-child(8){
+    z-index:0;
+    -webkit-animation:zoomOut 3s 3s 1 both;
+    -moz-animation:zoomOut 3s 3s 1 both;
+    animation:zoomOut 3s 3s 1 both;
+
+}
+#page15 span:nth-child(9){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 4s 1 both;
+    -moz-animation:fadeIn 2s 4s 1 both;
+    animation:fadeIn 2s 4s 1 both;
+
+}
+#page15 span:nth-child(10){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 4s 1 both;
+    -moz-animation:fadeIn 2s 4s 1 both;
+    animation:fadeIn 2s 4s 1 both;
+
+}
+#page15 span:nth-child(11){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 4s 1 both;
+    -moz-animation:fadeIn 2s 4s 1 both;
+    animation:fadeIn 2s 4s 1 both;
+
+}
+#page15 span:nth-child(12){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 4s 1 both;
+    -moz-animation:fadeIn 2s 4s 1 both;
+    animation:fadeIn 2s 4s 1 both;
+
+}
+#page15 span:nth-child(13){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 4s 1 both;
+    -moz-animation:fadeIn 2s 4s 1 both;
+    animation:fadeIn 2s 4s 1 both;
+
+}
+#page15 span:nth-child(14){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 4s 1 both;
+    -moz-animation:fadeIn 2s 4s 1 both;
+    animation:fadeIn 2s 4s 1 both;
+
+}
+#page15 span:nth-child(15){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 4s 1 both;
+    -moz-animation:fadeIn 2s 4s 1 both;
+    animation:fadeIn 2s 4s 1 both;
+
+}
+#page15 span:nth-child(16){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 4s 1 both;
+    -moz-animation:fadeIn 2s 4s 1 both;
+    animation:fadeIn 2s 4s 1 both;
+
+}
+#page15 span:nth-child(17){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 4s 1 both;
+    -moz-animation:fadeIn 2s 4s 1 both;
+    animation:fadeIn 2s 4s 1 both;
+
+}
+#page15 span:nth-child(18){
+    z-index:0;
+    -webkit-animation:translate 1s 4.7s 1 both,tada 2s 6s 3 forwards;-moz-animation:translate 1s 4.7s 1 both,tada 2s 6s 3 forwards;
+    animation:translate 1s 4.7s 1 both,tada 2s 6s 3 forwards;
+
+}
+#page15 img:nth-child(19){
+    z-index:0;
+    -webkit-animation:slideRight 1s 1.3s 1 both;
+    -moz-animation:slideRight 1s 1.3s 1 both;
+    animation:slideRight 1s 1.3s 1 both;
+
+}
+#page15 img:nth-child(20){
+    z-index:0;
+    -webkit-animation:slideLeft 1s 1.3s 1 both;
+    -moz-animation:slideLeft 1s 1.3s 1 both;
+    animation:slideLeft 1s 1.3s 1 both;
+
+}
+#page15 img:nth-child(21){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 1.5s 1 both,wobble 2s 3.5s 1 forwards;
+    -moz-animation:fadeIn 2s 1.5s 1 both,wobble 2s 3.5s 1 forwards;
+    animation:fadeIn 2s 1.5s 1 both,wobble 2s 3.5s 1 forwards;
+
+}
+#page15 img:nth-child(22){
+    z-index:0;
+    -webkit-animation:fadeIn 2s 1.8s 1 both;
+    -moz-animation:fadeIn 2s 1.8s 1 both;
+    animation:fadeIn 2s 1.8s 1 both;
 
 }
 @keyframes rotateInDownRight {
@@ -2949,5 +3287,65 @@ html{
     filter: alpha(opacity=100);
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
+    }
+}
+@keyframes wobble {
+    0% {
+        -webkit-transform: none;
+        transform: none;
+    }
+    15% {
+    -webkit-transform: translate3d(-25%,0,0) rotate3d(0,0,1,-5deg);
+    transform: translate3d(-25%,0,0) rotate3d(0,0,1,-5deg);
+    }
+    30% {
+    -webkit-transform: translate3d(20%,0,0) rotate3d(0,0,1,3deg);
+    transform: translate3d(20%,0,0) rotate3d(0,0,1,3deg);
+    }
+    45% {
+    -webkit-transform: translate3d(-15%,0,0) rotate3d(0,0,1,-3deg);
+    transform: translate3d(-15%,0,0) rotate3d(0,0,1,-3deg);
+    }
+    60% {
+    -webkit-transform: translate3d(10%,0,0) rotate3d(0,0,1,2deg);
+    transform: translate3d(10%,0,0) rotate3d(0,0,1,2deg);
+    }
+    75% {
+    -webkit-transform: translate3d(-5%,0,0) rotate3d(0,0,1,-1deg);
+    transform: translate3d(-5%,0,0) rotate3d(0,0,1,-1deg);
+    }
+    100% {
+    -webkit-transform: none;
+    transform: none;
+    }
+}
+@-webkit-keyframes wobble {
+    0% {
+        -webkit-transform: none;
+        transform: none;
+    }
+    15% {
+    -webkit-transform: translate3d(-25%,0,0) rotate3d(0,0,1,-5deg);
+    transform: translate3d(-25%,0,0) rotate3d(0,0,1,-5deg);
+    }
+    30% {
+    -webkit-transform: translate3d(20%,0,0) rotate3d(0,0,1,3deg);
+    transform: translate3d(20%,0,0) rotate3d(0,0,1,3deg);
+    }
+    45% {
+    -webkit-transform: translate3d(-15%,0,0) rotate3d(0,0,1,-3deg);
+    transform: translate3d(-15%,0,0) rotate3d(0,0,1,-3deg);
+    }
+    60% {
+    -webkit-transform: translate3d(10%,0,0) rotate3d(0,0,1,2deg);
+    transform: translate3d(10%,0,0) rotate3d(0,0,1,2deg);
+    }
+    75% {
+    -webkit-transform: translate3d(-5%,0,0) rotate3d(0,0,1,-1deg);
+    transform: translate3d(-5%,0,0) rotate3d(0,0,1,-1deg);
+    }
+    100% {
+    -webkit-transform: none;
+    transform: none;
     }
 }
