--- a/index.css
+++ b/index.css
@@ -175,6 +175,16 @@ html{
     background-size: cover;
     position: relative;
 }
+.slide17{
+    background: url("img/a84.png") no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.slide18{
+    background: url("img/a84.png") no-repeat;
+    background-size: cover;
+    position: relative;
+}
 .slide1 img:nth-child(1){
     z-index:0;
     position: absolute;
@@ -1472,6 +1482,107 @@ html{
     left: 1.3rem;
     bottom: 0;
 }
+.slide17 img:nth-child(1){
+    z-index:0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+.slide17 span:nth-child(2){
+    z-index:0;
+    font-size: .32rem;
+    position: absolute;
+    left: 3.3rem;
+    top: 1.2rem;
+}
+.slide17 span:nth-child(3){
+    z-index:0;
+    font-size: .32rem;
+    position: absolute;
+    left: 3.3rem;
+    top: 1.8rem;
+}
+.slide17 span:nth-child(4){
+    z-index:0;
+    font-size: .32rem;
+    position: absolute;
+    left: 3.3rem;
+    top: 2.4rem;
+}
+.slide18 img:nth-child(1){
+    z-index:0;
+    width: 100%;
+    height: 7.97rem;
+    position: absolute;
+    left:0;
+    top: 0;
+}
+.slide18 img:nth-child(2){
+    z-index:0;
+    width: 100%;
+    height: 6.97rem;
+    position: absolute;
+    left:0;
+    bottom: 0;
+}
+.slide18 span:nth-child(3){
+    z-index:0;
+    font-size: .36rem;
+    color: rgb(149,10,10);
+    position: absolute;
+    left:1rem;
+    top: 1rem;
+}
+.slide18 span:nth-child(4){
+    z-index:0;
+    font-size: .36rem;
+    color: rgb(149,10,10);
+    position: absolute;
+    left:1rem;
+    top: 1.5rem;
+}
+.slide18 span:nth-child(5){
+    z-index:0;
+    font-size: .36rem;
+    color: rgb(149,10,10);
+    position: absolute;
+    left:1rem;
+    top: 2rem;
+}
+.slide18 span:nth-child(6){
+    z-index:0;
+    font-size: .36rem;
+    color: rgb(149,10,10);
+    position: absolute;
+    left:1rem;
+    top: 2.5rem;
+}
+.slide18 span:nth-child(7){
+    z-index:0;
+    font-size: .36rem;
+    color: rgb(149,10,10);
+    position: absolute;
+    left:1rem;
+    top: 3rem;
+}
+.slide18 span:nth-child(8){
+    z-index:0;
+    font-size: .36rem;
+    color: rgb(149,10,10);
+    position: absolute;
+    left:1rem;
+    top: 3.5rem;
+}
+.slide18 img:nth-child(9){
+    z-index:0;
+    height: 2.02rem;
+    width: 200%;
+    position: absolute;
+    left:0;
+    top: 4.5rem;
+}
 #page1 img:nth-child(1){
     -webkit-animation:rotateInDownRight 1s 1.5s 1 both;
     -moz-animation:rotateInDownRight 1s 1.5s 1 both;
@@ -2465,6 +2576,97 @@ html{
     -webkit-animation:zoomIn 1s 2.3s 1 both;
     -moz-animation:zoomIn 1s 2.3s 1 both;
     animation:zoomIn 1s 2.3s 1 both;
+
+}
+#page17 img:nth-child(1){
+    z-index:0;
+    -webkit-animation:zoomIn 1s 0.5s 1 both;
+    -moz-animation:zoomIn 1s 0.5s 1 both;
+    animation:zoomIn 1s 0.5s 1 both;
+
+}
+#page17 span:nth-child(2){
+    z-index:0;
+    -webkit-animation:bounceInRight 2s 0.5s 1 both;
+    -moz-animation:bounceInRight 2s 0.5s 1 both;
+    animation:bounceInRight 2s 0.5s 1 both;
+
+}
+#page17 span:nth-child(3){
+    z-index:0;
+    -webkit-animation:bounceInRight 2s 1.5s 1 both;
+    -moz-animation:bounceInRight 2s 1.5s 1 both;
+    animation:bounceInRight 2s 1.5s 1 both;
+
+}
+#page17 span:nth-child(4){
+    z-index:0;
+    -webkit-animation:bounceInRight 2s 2.5s 1 both;
+    -moz-animation:bounceInRight 2s 2.5s 1 both;
+    animation:bounceInRight 2s 2.5s 1 both;
+
+}
+#page18 img:nth-child(1){
+    z-index:0;
+    -webkit-animation:bounceInUp 2s 0.5s 1 both;
+    -moz-animation:bounceInUp 2s 0.5s 1 both;
+    animation:bounceInUp 2s 0.5s 1 both;
+
+}
+#page18 img:nth-child(2){
+    z-index:0;
+    -webkit-animation:bounceInDown 2s 0.5s 1 both;
+    -moz-animation:bounceInDown 2s 0.5s 1 both;
+    animation:bounceInDown 2s 0.5s 1 both;
+
+}
+#page18 span:nth-child(3){
+    z-index:0;
+    -webkit-animation:bounceInLeft 2s 1.5s 1 both;
+    -moz-animation:bounceInLeft 2s 1.5s 1 both;
+    animation:bounceInLeft 2s 1.5s 1 both;
+
+}
+#page18 span:nth-child(4){
+    z-index:0;
+    -webkit-animation:bounceInLeft 2s 2.5s 1 both;
+    -moz-animation:bounceInLeft 2s 2.5s 1 both;
+    animation:bounceInLeft 2s 2.5s 1 both;
+
+}
+#page18 span:nth-child(5){
+    z-index:0;
+    -webkit-animation:bounceInLeft 2s 3.5s 1 both;
+    -moz-animation:bounceInLeft 2s 3.5s 1 both;
+    animation:bounceInLeft 2s 3.5s 1 both;
+
+}
+#page18 span:nth-child(6){
+    z-index:0;
+    -webkit-animation:bounceInLeft 2s 3.5s 1 both;
+    -moz-animation:bounceInLeft 2s 3.5s 1 both;
+    animation:bounceInLeft 2s 3.5s 1 both;
+
+}
+#page18 span:nth-child(7){
+    z-index:0;
+    -webkit-animation:bounceInLeft 2s 4.5s 1 both;
+    -moz-animation:bounceInLeft 2s 4.5s 1 both;
+    animation:bounceInLeft 2s 4.5s 1 both;
+
+}
+#page18 span:nth-child(8){
+    z-index:0;
+    -webkit-animation:bounceInLeft 2s 5.5s 1 both;
+    -moz-animation:bounceInLeft 2s 5.5s 1 both;
+    animation:bounceInLeft 2s 5.5s 1 both;
+
+}
+#page18 img:nth-child(9){
+    z-index:0;
+    -webkit-animation: zoomIn 3s 6s 1 both;
+    -moz-animation: zoomIn 3s 6s 1 both;
+    animation: zoomIn 3s 6s 1 both;
 
 }
 @keyframes rotateInDownRight {
